--- a/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -1,20 +1,32 @@
 ﻿@model List<Category>
 
-<h1>Category List</h1>
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Category Name 1</th>
-            <th>Display Order</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var obj in Model)
-        {
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2>Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="" asp-action="" class="btn btn-primary">
+                Create New Category
+                <i class="bi bi-plus-circle"></i>
+            </a>
+        </div>
+    </div>
+    <table class="table table-bordered table-striped">
+        <thead>
             <tr>
-                <td>@obj.Name</td>
-                <td>@obj.DisplayOrder</td>
+                <th>Category Name 1</th>
+                <th>Display Order</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var obj in Model)
+            {
+                <tr>
+                    <td>@obj.Name</td>
+                    <td>@obj.DisplayOrder</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
