--- a/Bulky/BulkyWeb/Views/Category/Edit.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Edit.cshtml
@@ -10,6 +10,12 @@
         <div asp-validation-summary="All"></div>
 
         <div class="mb-3 row p-1">
+            <label asp-for="Id" class="p-0"></label>
+            <input asp-for="Id" class="form-control" />
+            <span asp-validation-for="Id" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
