--- a/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -28,7 +28,7 @@
                     <td>@obj.DisplayOrder</td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-categoryId="@obj.Id" class="btn btn-info mx-2">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-info mx-2">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
                             <a asp-controller="Category" asp-action="" class="btn btn-danger mx-2">
