--- a/Bulky/BulkyWeb/Views/Category/Edit.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Edit.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Update</button>
+                <button type="submit" class="btn btn-info form-control">Update</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-outline-secondary border form-control">Back</a>
