--- a/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -1,9 +1,5 @@
 ﻿@model List<Category>
-@if (TempData["success"] != null)
-{
-    @*<h2>@TempData["success"]</h2>*@
-    <span class="text-success">@TempData["success"]</span>
-}
+<partial name="_Notification" />
 
 <div class="container">
     <div class="row pt-4 pb-3">
