--- a/Bulky/BulkyWeb/Views/Shared/_Notification.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Notification.cshtml
@@ -1,11 +1,17 @@
 ﻿@if (TempData["success"] != null)
 {
     @*<h2>@TempData["success"]</h2>*@
-    <span class="text-success">@TempData["success"]</span>
+    @*<span class="text-success">@TempData["success"]</span>*@
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script type="text/javascript">toastr.success('@TempData["success"]')</script>
 }
 
 
 @if (TempData["error"] != null)
 {
-    <span class="text-danger">@TempData["error"]</span>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script type="text/javascript">toastr.error('@TempData["error"]')</script>
 }
