--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-muted">
+    <footer class="border-top footer bg-primary text-muted mt-5">
         <div class="container text-center">
             &copy; 2023 - BulkyWeb - 
             <a class="text-light" asp-area="" asp-controller="Home" asp-action="Privacy">
