--- a/Bulky/BulkyWebRazor_Temp/Pages/Categories/Edit.cshtml
+++ b/Bulky/BulkyWebRazor_Temp/Pages/Categories/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BulkyWebRazor_Temp.Pages.Categories.EditModel
+@model BulkyBookWebRazor_Temp.Pages.Categories.EditModel
 
 <form method="post">
     <div class="border p-3 mt-4">
