--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="card-body p-4">
-        <form method="post" class="row" encype="multipart/form-data">
+        <form method="post" class="row" enctype="multipart/form-data">
             <div class="border p-3">
 
                 <div asp-validation-summary="All"></div>
@@ -60,9 +60,8 @@
                     <span asp-validation-for="Product.Price100" class="text-danger"></span>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input type="file" class="form-control border-0 shadow" />
-                    <label asp-for="Product.ImageUrl" class="ms-2"></label>
-                    <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+                    <input type="file" name="file" class="form-control border-0 shadow" />
+                    <label asp-for="Product.ImageUrl" class="ms-2"></label> 
                 </div>
                 <div class="form-floating py-2 col-12">
                     <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
