--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -62,7 +62,7 @@
                 </div>
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-success form-control">Update</button>
+                        <button type="submit" class="btn btn-danger form-control">Delete</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary border form-control">Back</a>
