--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -28,6 +28,7 @@
                     <th>Price</th>
                     <th>Price for 50</th>
                     <th>Price for 100</th>
+                    <th>Category</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -42,6 +43,7 @@
                         <td>@obj.Price</td>
                         <td>@obj.Price50</td>
                         <td>@obj.Price100</td>
+                        <td>@obj.Category.Name</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
                                 <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-info mx-2">
