--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,21 +18,18 @@
                 </a>
             </div>
         </div>
-        <table class="table table-bordered table-striped">
+        <table id="productsTable" class="table table-bordered table-striped" width="100%">
             <thead>
                 <tr>
                     <th>Title</th>
                     <th>ISBN</th>
-                    <th>Author</th>
-                    <th>List Price</th>
-                    <th>Price</th>
-                    <th>Price for 50</th>
-                    <th>Price for 100</th>
+                    <th>Author</th> 
+                    <th>Price</th> 
                     <th>Category</th>
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody>
+           @*  <tbody>
                 @foreach (var obj in Model)
                 {
                     <tr>
@@ -56,7 +53,11 @@
                         </td>
                     </tr>
                 }
-            </tbody>
+            </tbody> *@
         </table>
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/js/product.js"></script>
+}
