--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -25,10 +25,9 @@
                     <label asp-for="Title" class="ms-2"></label>
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
-                <div class="form-floating py-2 col-12">
-                    <textarea asp-for="Description" disabled class="form-control border-0 shadow"></textarea>
-                    <label asp-for="Description" class="ms-2"></label>
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                <div class="py-2 col-12">
+                    <label asp-for="Description" class="ms-2 text-muted"></label>
+                    <textarea asp-for="Description" disabled class="form-control border-0 shadow">Product Description</textarea>
                 </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="ISBN" disabled class="form-control border-0 shadow" />
@@ -73,8 +72,14 @@
     </div>
 </div>
 
-
 @section Scripts{
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
+        });
+    </script>
     @{
         <partial name="_ValidationScriptsPartial"></partial>
     }
