--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.tiny.cloud/1/ml84d3rjg9p54t53cvf6aasyi35pe5thl6tk97qrsae93pgn/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
