--- a/Bulky/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-here
+﻿<h1>Category List</h1>
+<table class="table table-bordered table-striped">
+    <tr>
+        <th>Category Name</th>
+        <th>Display Order</th>
+    </tr>
+</table>
