--- a/Bulky/Bulky/BulkyWeb/Views/Category/Edit.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Views/Category/Edit.cshtml
@@ -9,11 +9,7 @@
 
         <div asp-validation-summary="All"></div>
 
-        @* <div class="mb-3 row p-1" hidden>
-            <label asp-for="Id" class="p-0"></label>
-            <input asp-for="Id" class="form-control" />
-            <span asp-validation-for="Id" class="text-danger"></span>
-        </div> *@
+        <input asp-for="Id" class="form-control" hidden />
 
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
