--- a/Bulky/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model List<Category>
+@if (TempData["success"] != null)
+{
+    <span class="text-success">@TempData["success"]</span> 
+}
 
 <div class="container">
     <div class="row pt-4 pb-3">
