--- a/Bulky/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#">Action 2</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a></li>
                             </ul>
                         </li>
                     </ul>
