--- a/Bulky/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/ml84d3rjg9p54t53cvf6aasyi35pe5thl6tk97qrsae93pgn/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
