Section 6: Update Product Custom Code

--- a/Bulky/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -17,6 +17,7 @@
                         <div asp-validation-summary="All"></div>
 
                         <input asp-for="Product.Id" class="form-control border-0 shadow" hidden />
+                        <input asp-for="Product.ImageUrl" class="form-control border-0 shadow" hidden />
 
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Product.Title" class="form-control border-0 shadow" />
