--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,14 +13,14 @@
                 <h2>Use a local account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Input.Email" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                    <label asp-for="Input.Email" class="text-dark ms-2"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="Input.Password" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                    <label asp-for="Input.Password" class="text-dark ms-2"></label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
@@ -31,8 +31,10 @@
                         </label>
                     </div>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                <div class="row pt-2">
+                    <div>
+                        <button id="login-submit" type="submit" class="w-100 btn btn-success">Login</button>
+                    </div>
                 </div>
                 <div>
                     <p>
