--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,22 +12,26 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.Email" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Email" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.Password" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Password" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.ConfirmPassword" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.ConfirmPassword" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            </div> 
+            <div class="row pt-2">
+                <div >
+                    <button id="registerSubmit" type="submit" class="w-100 btn btn-success">Create</button>
+                </div> 
+            </div> 
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
