--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -11,12 +11,16 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.Email" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Email" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
+            <div class="row pt-2">
+                <div>
+                    <button type="submit" class="w-100 btn btn-success">Resend</button>
+                </div>
+            </div> 
         </form>
     </div>
 </div>
