Section 8: Register a User

--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -11,22 +11,26 @@
     <div class="col-md-6">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
-                <label asp-for="Input.OldPassword" class="form-label"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.OldPassword" class="form-control border-0 shadow" autocomplete="current-password" aria-required="true" />
+                <label asp-for="Input.OldPassword" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.NewPassword" class="form-label"></label>
+            </div> 
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.NewPassword" class="form-control border-0 shadow" autocomplete="new-password" aria-required="true" />
+                <label asp-for="Input.NewPassword" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.ConfirmPassword" class="form-control border-0 shadow" autocomplete="new-password" aria-required="true" />
+                <label asp-for="Input.ConfirmPassword" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <div class="row pt-2">
+                <div>
+                    <button type="submit" class="w-100 btn btn-info">Update Password</button>
+                </div>
+            </div> 
         </form>
     </div>
 </div>
