--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -29,12 +29,16 @@
                     <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
                 </div>
             }
-            <div class="form-floating">
-                <input asp-for="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" />
-                <label asp-for="Input.NewEmail" class="form-label"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.NewEmail" class="form-control border-0 shadow" autocomplete="email" aria-required="true" />
+                <label asp-for="Input.NewEmail" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary">Change email</button>
+            <div class="row pt-2">
+                <div>
+                    <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-info">Change Email</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
