--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -11,16 +11,21 @@
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Username" class="form-control" disabled />
-                <label asp-for="Username" class="form-label"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Username" class="form-control border-0 shadow" aria-required="true" />
+                <label asp-for="Username" class="text-dark ms-2"></label>
+                <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.PhoneNumber" class="form-control border-0 shadow" aria-required="true" />
+                <label asp-for="Input.PhoneNumber" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <div class="row pt-2">
+                <div>
+                    <button id="update-profile-button" type="submit" class="w-100 btn btn-info">Save</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
