--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,13 @@
                 <label asp-for="Input.ConfirmPassword" class="text-dark ms-2"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div> 
+            <div class="form-floating py-2 col-12">
+                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select border-0 shadow">
+                    <option disabled selected>--Select Role--</option>
+                </select>
+                <label asp-for="Input.Role" class="ms-2"></label>
+                @* <span asp-validation-for="Product.CategoryId" class="text-danger"></span> *@
+            </div>
             <div class="row pt-2">
                 <div >
                     <button id="registerSubmit" type="submit" class="w-100 btn btn-success">Create</button>
