--- a/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bulky/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,74 +4,85 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating py-2 col-12">
-                <input asp-for="Input.Email" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email" class="text-dark ms-2"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-12">
-                <input asp-for="Input.Password" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Password" class="text-dark ms-2"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating py-2 col-12">
-                <input asp-for="Input.ConfirmPassword" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword" class="text-dark ms-2"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div> 
-            <div class="form-floating py-2 col-12">
-                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select border-0 shadow">
-                    <option disabled selected>--Select Role--</option>
-                </select>
-                <label asp-for="Input.Role" class="ms-2"></label>
-                @* <span asp-validation-for="Product.CategoryId" class="text-danger"></span> *@
-            </div>
-            <div class="row pt-2">
-                <div >
-                    <button id="registerSubmit" type="submit" class="w-100 btn btn-success">Create</button>
-                </div> 
-            </div> 
-        </form>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-opacity-50 bg-primary bg-gradient ml-0 py-4">
+           <div class="row">
+                <div class="col-12 text-center">
+                    <h2 class="py-2 text-white">Register</h2>
+                </div>
+           </div>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
+    <div class="card-body p-4">
+        <div class="row pt-4">
+            <div class="col-md-12">
+                <form id="registerForm" class="row" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <h4 class="border-bottom pb-3 mb-4 text-secondary text-center">Create a new account.</h4> 
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-floating py-2 col-md-12">
+                        <input asp-for="Input.Email" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                        <label asp-for="Input.Email" class="text-muted ms-2"></label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    <div class="form-floating py-2 col-md-6">
+                        <input asp-for="Input.Password" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                        <label asp-for="Input.Password" class="text-muted ms-2"></label>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating py-2 col-md-6">
+                        <input asp-for="Input.ConfirmPassword" class="form-control border-0 shadow" autocomplete="username" aria-required="true" />
+                        <label asp-for="Input.ConfirmPassword" class="text-muted ms-2"></label>
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating py-2 col-md-6">
+                        <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select border-0 shadow">
+                            <option disabled selected>--Select Role--</option>
+                        </select>
+                        <label asp-for="Input.Role" class="text-muted ms-2"></label>
+                        @* <span asp-validation-for="Product.CategoryId" class="text-danger"></span> *@
+                    </div>
+                    <div class="row pt-2">
                         <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+                            <button id="registerSubmit" type="submit" class="w-50 btn btn-success">Create</button>
                         </div>
-                    </form>
-                }
-            }
-        </section>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-12">
+                <section>
+                    <p class="divider-text d-flex pt-3">Or</p>
+                    <h4>Use another service to register.</h4>  
+                    @{
+                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                        {
+                            <div>
+                                <p>
+                                    There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                        article
+                                        about setting up this ASP.NET application to support logging in via external services
+                                    </a>.
+                                </p>
+                            </div>
+                        }
+                        else
+                        {
+                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                <div>
+                                    <p>
+                                        @foreach (var provider in Model.ExternalLogins!)
+                                        {
+                                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                        }
+                                    </p>
+                                </div>
+                            </form>
+                        }
+                    }
+                </section>
+            </div>
+        </div>
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
