--- a/Bulky/BulkyWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/Bulky/BulkyWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -20,6 +20,9 @@
                     </div>
                 </div>
                 <div class="row">
+
+                    <input asp-for="ProductId" hidden  />
+
                     <div class="col-12 col-lg-3 offset-lg-1 text-center mb-3">
                         <img src="@Model.Product.ImageUrl" width="100%" class="rounded" />
                     </div>
@@ -85,8 +88,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
-                                <button type="submit" disabled
-                                        class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
+                                <button type="submit" class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
                                     Add to Cart
                                 </button>
                             </div>
