Section 10: Shopping Cart UI

--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                             </li>
                         }
                     </ul>
+                    <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
+                        <i class="bi bi-bag"></i>
+                    </a>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
