Section 12: Filters in Order List

--- a/Bulky/BulkyWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -62,7 +62,8 @@
                     <th>Name</th>
                     <th>Phone Number</th>
                     <th>Email</th>
-                    <th>Status</th>
+                    <th>Order Status</th>
+                    <th>Payment Status</th>
                     <th>Total</th>
                     <th></th>
                 </tr>
