Section 12: Ship Order - Carrier & Tracking No. Validation

--- a/Bulky/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -133,7 +133,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" type="text" class="form-control border-0 shadow" />
+                                        <input asp-for="OrderHeader.Carrier" id="carrier" type="text" class="form-control border-0 shadow" />
                                      }
                                     else
                                     {
@@ -146,7 +146,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control border-0 shadow" />
+                                        <input asp-for="OrderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control border-0 shadow" />
                                      }
                                     else
                                     {
@@ -258,7 +258,7 @@
                                 }
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1">Ship Order</button>
+                                    <button type="submit" onClick="return validateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
                                 }
                                 @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
                                 Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
@@ -275,3 +275,28 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        function validateInput() {
+            if (document.getElementById("trackingNumber").value==""){
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Ooops..',
+                    text: 'Please enter tracking number!'
+                })
+                return false;
+            }
+            if (document.getElementById("carrier").value==""){
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Ooops..',
+                    text: 'Please enter carrier!'
+                })
+                return false;
+            }
+            return true; 
+        }
+    </script>
+}
